# fusil_h5py_plugin

./: .gitignore  README.md  pyproject.toml
fusil_h5py_plugin/: __init__.py  h5py_argument_generator.py  h5py_tricky_weird.py  write_h5py_code.py
tests/: test_h5py_argument_generator.py  test_startup_hook_caps.py  test_write_h5py_code.py
