[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusil-h5py-plugin"
version = "0.1.0"
description = "Fusil plugin for fuzzing the h5py library"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Fusil Developers"}
]
dependencies = [
    "fusil",
    "h5py",
    "numpy",
]

[project.entry-points."fusil.plugins"]
h5py = "fusil_h5py_plugin:register"

[tool.setuptools]
packages = ["fusil_h5py_plugin"]

# Mirror fusil's ruff config so the modules moved out of fusil stay clean/identical.
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
# The moved modules do conditional/late imports (optional-feature detection) and tests
# set up sys.path before importing, so E402 (import-not-at-top) is expected.
ignore = ["E402"]
